--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/Manvel/cmints-single-lang-boilerplate/issues"
   },
   "dependencies": {
-    "cmints": "^0.8.1"
+    "cmints": "^0.8.1",
+    "reveal.js": "^3.8.0"
   }
 }
